# society_rhythm

./: CMakeLists.txt
include/society_rhythm/: constants.h  game.h
include/society_rhythm/game/: level.h
include/society_rhythm/screens/: debug_overlay.h  ingame_screen.h  main_menu_screen.h  starting_screen.h
resources/society_rhythm/langs/: en.json
resources/society_rhythm/levels/: slaughter_house.json
src/: game.cpp  main.cpp
src/game/: level.cpp
src/screens/: debug_overlay.cpp  ingame_screen.cpp  main_menu_screen.cpp  starting_screen.cpp
